--- a/src/components/cardHouse/style.scss
+++ b/src/components/cardHouse/style.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    max-width: 336px;
+    width: 336px;
     background: rgb(255, 255, 255);
     box-shadow: 0px 32px 34px rgba(0, 0, 0, 0.04);
     border-radius: 25px;
