--- a/src/components/describle/style.scss
+++ b/src/components/describle/style.scss
@@ -4,6 +4,8 @@
     grid-template-rows: 1fr;
     align-items: center;
     gap: 60px;
+    max-width: var(--max-width-page);
+    margin: auto;
 
     .cover {
         width: 100%;
@@ -11,6 +13,11 @@
         background-position: center !important;
         background-size: cover !important;
         filter: drop-shadow(0px 62px 54px rgba(0, 0, 0, 0.3));
+
+        &::before {
+            content: " ";
+            position: absolute;
+        }
     }
 
     .cover.left {
