--- a/src/components/findHouse/style.scss
+++ b/src/components/findHouse/style.scss
@@ -1,4 +1,7 @@
 .findHouse {
+    max-width: var(--max-width-page);
+    margin: auto;
+
     .filters,
     .houses {
         display: flex;
@@ -8,6 +11,7 @@
     .houses {
         gap: 30px;
         justify-content: center;
+        margin-top: 75px;
     }
 
     .filters {
@@ -18,6 +22,7 @@
         background-color: rgb(255, 255, 255);
         border-radius: 25px;
         box-shadow: 0px 32px 34px rgba(0, 0, 0, 0.12);
+        margin-top: 60px;
 
         select {
             color: rgb(0, 0, 0);
