--- a/src/components/introduction/style.scss
+++ b/src/components/introduction/style.scss
@@ -1,22 +1,39 @@
 .introduction {
-    h1 {
-        max-width: 500px;
-        font-weight: 700;
-        font-size: 80px;
-        line-height: 100%;
-        color: rgb(255, 255, 255);
-    }
-    p {
-        max-width: 450px;
-        font-size: 20px;
-        font-weight: 400;
-        line-height: 140%;
-        color: rgba(255, 255, 255, 0.6);
-        margin-top: 20px;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto 100px;
+    height: 768px;
+    max-width: var(--max-width-page);
+    margin: auto;
+
+    .main {
+        grid-column: 1;
+        grid-row: 1;
+        align-self: center;
+
+        h1 {
+            max-width: 520px;
+            font-weight: 700;
+            font-size: 80px;
+            line-height: 100%;
+            color: rgb(255, 255, 255);
+        }
+        p {
+            max-width: 450px;
+            font-size: 20px;
+            font-weight: 400;
+            line-height: 140%;
+            color: rgba(255, 255, 255, 0.6);
+            margin-top: 20px;
+        }
     }
     .footer {
-        background-color: rgb(255, 255, 255);
+        grid-column: 1;
+        grid-row: 2;
 
-        padding: 15px;
+        display: flex;
+        align-items: center;
+
+        background-color: rgb(255, 255, 255);
     }
 }
